# gyul

./: .gitignore  .gitmodules  build.zig  build.zig.zon  readme.md  test.gyul
.github/workflows/: ci.yml
scripts/: semantictests.py
src/cli/: main.zig
src/gyul/: AST.zig  ASTPrinter.zig  Chain.zig  Checker.zig  EVMBuiltins.zig  GlobalState.zig  Interpreter.zig  LocalState.zig  ObjectTree.zig  PagedMemory.zig  Parser.zig  YulGen.zig  ast.zig  root.zig  sparse.zig  spec_corpus_test.zig  tokenizer.zig  u256_ops.zig
test/ref/: CMakeLists.txt  build.sh  yul_ref.cpp
